Hide some internal functions as : _init_moa_stream_and_create_moa_header,_add_instances_to_moa_stream, _numpy_to_ARFF Rename Schema.get_schema to Schema.create_schema_from_values

--- a/notebooks/Classification_Evaluator_Examples.ipynb
+++ b/notebooks/Classification_Evaluator_Examples.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.393469Z",
-     "start_time": "2024-03-16T07:25:28.716985Z"
+     "end_time": "2024-03-17T23:18:42.927656Z",
+     "start_time": "2024-03-17T23:18:42.923537Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:17.526967Z",
@@ -29,20 +29,7 @@
      "shell.execute_reply": "2024-02-29T01:28:19.967035Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capymoa_root: /Users/ng98/Desktop/CODE/NuwanCapyMOA/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/NuwanCapyMOA/src/capymoa/jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "JAVA_HOME: /Users/ng98/Library/Java/JavaVirtualMachines/openjdk-14.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from capymoa.stream.stream import Schema\n",
     "from capymoa.evaluation import ClassificationEvaluator, ClassificationWindowedEvaluator\n",
@@ -62,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "195b466e-c3c5-4288-81db-4fd562798011",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.410416Z",
-     "start_time": "2024-03-16T07:25:35.397167Z"
+     "end_time": "2024-03-17T23:18:43.048594Z",
+     "start_time": "2024-03-17T23:18:43.043966Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:19.972696Z",
@@ -105,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "29b0a5d9-1f26-4dbe-bb39-158d9521e90c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.442987Z",
-     "start_time": "2024-03-16T07:25:35.412821Z"
+     "end_time": "2024-03-17T23:18:43.074834Z",
+     "start_time": "2024-03-17T23:18:43.056990Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:19.990664Z",
@@ -136,7 +123,7 @@
    "source": [
     "values_for_class_label = [0,1]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -165,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "dd73c09c-0e2f-4adc-90bf-25c85adc5305",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.458566Z",
-     "start_time": "2024-03-16T07:25:35.445315Z"
+     "end_time": "2024-03-17T23:18:43.087349Z",
+     "start_time": "2024-03-17T23:18:43.077336Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.030525Z",
@@ -192,7 +179,7 @@
    "source": [
     "values_for_class_label = [0,1,2]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, precision_per_class=True)\n",
     "\n",
     "evaluator.update(0, 2)\n",
@@ -219,12 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "64458fd0-1f88-48c2-a532-b19b48ce9472",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.475247Z",
-     "start_time": "2024-03-16T07:25:35.463076Z"
+     "end_time": "2024-03-17T23:18:43.124545Z",
+     "start_time": "2024-03-17T23:18:43.115102Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.047462Z",
@@ -246,7 +233,7 @@
    "source": [
     "values_for_class_label = [\"zero\",\"one\",\"two\"]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
     "evaluator.update(\"one\", \"one\")\n",
@@ -273,12 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "a37da527c04f62a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.489958Z",
-     "start_time": "2024-03-16T07:25:35.477130Z"
+     "end_time": "2024-03-17T23:18:43.152500Z",
+     "start_time": "2024-03-17T23:18:43.140368Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -298,7 +285,7 @@
    "source": [
     "values_for_class_label = [\"banana\",\"apple\",\"plane\"]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_per_class=True)\n",
     "\n",
     "evaluator.update(\"plane\", \"banana\")\n",
@@ -325,12 +312,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.507888Z",
-     "start_time": "2024-03-16T07:25:35.492089Z"
+     "end_time": "2024-03-17T23:18:43.245984Z",
+     "start_time": "2024-03-17T23:18:43.236434Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.066399Z",
@@ -352,7 +339,7 @@
    "source": [
     "values_for_class_label = [\"banana\",\"apple\",\"plane\"]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_per_class=True)\n",
     "\n",
     "# Old version, this used to work\n",
@@ -385,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "b3741d4b-46fb-44f8-9adc-4c4734f0733d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.523467Z",
-     "start_time": "2024-03-16T07:25:35.509897Z"
+     "end_time": "2024-03-17T23:18:43.275176Z",
+     "start_time": "2024-03-17T23:18:43.265484Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.156773Z",
@@ -412,7 +399,7 @@
    "source": [
     "values_for_class_label = [5,3,1]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_precision_recall=True)\n",
     "\n",
     "evaluator.update(5, 1)\n",
@@ -444,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "f92d798a1e5373e4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.539128Z",
-     "start_time": "2024-03-16T07:25:35.525799Z"
+     "end_time": "2024-03-17T23:18:43.323469Z",
+     "start_time": "2024-03-17T23:18:43.312931Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -471,7 +458,7 @@
     "# belong to the label list values but can be interpreted as valid indexes? It works, but it is confusing... \n",
     "values_for_class_label = [5,3,1]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_precision_recall=True)\n",
     "\n",
     "evaluator.update(5, 0)\n",
@@ -496,12 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "6f940410-8866-448c-825c-5e06ba61ed54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.556385Z",
-     "start_time": "2024-03-16T07:25:35.541401Z"
+     "end_time": "2024-03-17T23:18:43.338566Z",
+     "start_time": "2024-03-17T23:18:43.331473Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.197018Z",
@@ -546,12 +533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.597943Z",
-     "start_time": "2024-03-16T07:25:35.568338Z"
+     "end_time": "2024-03-17T23:18:43.357975Z",
+     "start_time": "2024-03-17T23:18:43.345516Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.222968Z",
@@ -574,7 +561,7 @@
    "source": [
     "values_for_class_label = [0,1,2]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
     "evaluator.update(0, None)\n",
@@ -610,12 +597,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "a1a3f50c-fa77-4bdc-8105-597512670034",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.658714Z",
-     "start_time": "2024-03-16T07:25:35.600121Z"
+     "end_time": "2024-03-17T23:18:43.434130Z",
+     "start_time": "2024-03-17T23:18:43.404807Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.249786Z",
@@ -787,7 +774,7 @@
        "3                     33.333333                           NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +782,7 @@
    "source": [
     "values_for_class_label = [0,1]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationWindowedEvaluator(schema=schema, window_size=3)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -834,12 +821,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "73b739b9-60dc-4975-afb9-5d74e8abad99",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:35.704250Z",
-     "start_time": "2024-03-16T07:25:35.661640Z"
+     "end_time": "2024-03-17T23:18:43.466229Z",
+     "start_time": "2024-03-17T23:18:43.437253Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.333638Z",
@@ -963,7 +950,7 @@
        "1                           0.0                         100.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +958,7 @@
    "source": [
     "values_for_class_label = [0,1]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationWindowedEvaluator(schema=schema, window_size=5)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -1019,12 +1006,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "eb7c4331-b390-423d-b645-3cbae4752950",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:40.689778Z",
-     "start_time": "2024-03-16T07:25:35.711077Z"
+     "end_time": "2024-03-17T23:18:46.779916Z",
+     "start_time": "2024-03-17T23:18:43.483091Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:20.379579Z",
@@ -1230,7 +1217,7 @@
        "9                     95.129015                     65.738592  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,12 +1293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:44.450941Z",
-     "start_time": "2024-03-16T07:25:40.692697Z"
+     "end_time": "2024-03-17T23:18:50.093536Z",
+     "start_time": "2024-03-17T23:18:46.782691Z"
     },
     "execution": {
      "iopub.execute_input": "2024-02-29T01:28:25.683364Z",
@@ -1395,12 +1382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "e2e98a8c-acff-480c-9c1d-f21262bc5cfa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:49.614781Z",
-     "start_time": "2024-03-16T07:25:44.452641Z"
+     "end_time": "2024-03-17T23:18:53.059510Z",
+     "start_time": "2024-03-17T23:18:50.095257Z"
     },
     "tags": [
      "skip-execution"
@@ -1422,7 +1409,7 @@
        "2.0  146    17  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1438,7 @@
     "# Setting the class labels as floats since river only deals with floats. \n",
     "values_for_class_label = [1.0, 2.0, 3.0, 4.0, 5.0]\n",
     "feature_names=['f1','f2']\n",
-    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "schema = Schema.create_schema_from_values(feature_names, values_for_class_label=values_for_class_label)\n",
     "# Setting parameters using the option attribute directly\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
@@ -1502,12 +1489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "3e364565-0a1d-467d-89a6-d3598c4ddd76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-16T07:25:49.619739Z",
-     "start_time": "2024-03-16T07:25:49.617127Z"
+     "end_time": "2024-03-17T23:18:53.065483Z",
+     "start_time": "2024-03-17T23:18:53.062692Z"
     }
    },
    "outputs": [],
