Simplify instance type

--- a/notebooks/02_learners_api_examples.ipynb
+++ b/notebooks/02_learners_api_examples.ipynb
@@ -30,10 +30,10 @@
      "start_time": "2024-03-02T08:25:58.285683Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:40.495028Z",
-     "iopub.status.busy": "2024-03-21T04:38:40.494882Z",
-     "iopub.status.idle": "2024-03-21T04:38:44.167025Z",
-     "shell.execute_reply": "2024-03-21T04:38:44.162085Z"
+     "iopub.execute_input": "2024-03-27T22:56:43.750835Z",
+     "iopub.status.busy": "2024-03-27T22:56:43.750525Z",
+     "iopub.status.idle": "2024-03-27T22:56:45.119037Z",
+     "shell.execute_reply": "2024-03-27T22:56:45.118554Z"
     }
    },
    "outputs": [
@@ -41,17 +41,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
+      "capymoa_root: /home/anton/github.com/tachyonicClock/CapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /home/anton/github.com/tachyonicClock/CapyMOA/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "JAVA_HOME: /usr/lib64/jvm/java\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -100,10 +94,10 @@
      "start_time": "2024-03-02T08:25:58.358943Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:44.169260Z",
-     "iopub.status.busy": "2024-03-21T04:38:44.168960Z",
-     "iopub.status.idle": "2024-03-21T04:38:48.131744Z",
-     "shell.execute_reply": "2024-03-21T04:38:48.131185Z"
+     "iopub.execute_input": "2024-03-27T22:56:45.120762Z",
+     "iopub.status.busy": "2024-03-27T22:56:45.120558Z",
+     "iopub.status.idle": "2024-03-27T22:56:46.102024Z",
+     "shell.execute_reply": "2024-03-27T22:56:46.101671Z"
     }
    },
    "outputs": [
@@ -259,10 +253,10 @@
      "start_time": "2024-03-02T08:26:01.810306Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:48.134051Z",
-     "iopub.status.busy": "2024-03-21T04:38:48.133839Z",
-     "iopub.status.idle": "2024-03-21T04:38:53.376717Z",
-     "shell.execute_reply": "2024-03-21T04:38:53.376091Z"
+     "iopub.execute_input": "2024-03-27T22:56:46.103260Z",
+     "iopub.status.busy": "2024-03-27T22:56:46.103163Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.221509Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.221109Z"
     }
    },
    "outputs": [
@@ -503,10 +497,10 @@
      "start_time": "2024-03-02T08:26:04.556687Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:53.380076Z",
-     "iopub.status.busy": "2024-03-21T04:38:53.379257Z",
-     "iopub.status.idle": "2024-03-21T04:38:54.543241Z",
-     "shell.execute_reply": "2024-03-21T04:38:54.542629Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.223095Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.222946Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.694834Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.694297Z"
     }
    },
    "outputs": [
@@ -975,10 +969,10 @@
      "start_time": "2024-03-02T08:26:06.980302Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:54.545506Z",
-     "iopub.status.busy": "2024-03-21T04:38:54.545291Z",
-     "iopub.status.idle": "2024-03-21T04:38:54.680404Z",
-     "shell.execute_reply": "2024-03-21T04:38:54.679637Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.696450Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.696299Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.739132Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.738733Z"
     }
    },
    "outputs": [
@@ -1379,7 +1373,7 @@
     }
    ],
    "source": [
-    "from capymoa.stream.instance import _JavaLabeledInstance\n",
+    "from capymoa.stream.instance import LabeledInstance\n",
     "\n",
     "rtg = MOA_RTG()\n",
     "# Setting parameters using setViaCLIString\n",
@@ -1397,7 +1391,7 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = _JavaLabeledInstance(Schema(moa_header=rtg.getHeader()), rtg.nextInstance())\n",
+    "    instance = LabeledInstance.from_java_instance(Schema(moa_header=rtg.getHeader()), rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
     "    evaluator.update(instance.y_index, prediction)\n",
@@ -1429,10 +1423,10 @@
      "start_time": "2024-03-02T08:26:07.176110Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:54.687486Z",
-     "iopub.status.busy": "2024-03-21T04:38:54.687289Z",
-     "iopub.status.idle": "2024-03-21T04:38:55.131822Z",
-     "shell.execute_reply": "2024-03-21T04:38:55.131181Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.740609Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.740460Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.794078Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.793707Z"
     }
    },
    "outputs": [
@@ -1818,7 +1812,7 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
+    "    instance = LabeledInstance.from_java_instance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
     "    evaluator.update(instance.y_index, prediction)\n",
@@ -1850,10 +1844,10 @@
      "start_time": "2024-03-02T08:26:07.515860Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:55.135803Z",
-     "iopub.status.busy": "2024-03-21T04:38:55.135566Z",
-     "iopub.status.idle": "2024-03-21T04:38:55.446118Z",
-     "shell.execute_reply": "2024-03-21T04:38:55.444752Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.795445Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.795305Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.842744Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.842363Z"
     }
    },
    "outputs": [
@@ -2242,7 +2236,7 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
+    "    instance = LabeledInstance.from_java_instance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
     "    evaluator.update(instance.y_index, prediction)\n",
@@ -2276,10 +2270,10 @@
      "start_time": "2024-03-02T08:26:07.886717Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:55.465016Z",
-     "iopub.status.busy": "2024-03-21T04:38:55.463860Z",
-     "iopub.status.idle": "2024-03-21T04:38:55.964838Z",
-     "shell.execute_reply": "2024-03-21T04:38:55.964354Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.844154Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.844014Z",
+     "iopub.status.idle": "2024-03-27T22:56:47.896477Z",
+     "shell.execute_reply": "2024-03-27T22:56:47.896101Z"
     }
    },
    "outputs": [
@@ -2667,7 +2661,7 @@
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "while rtg.hasMoreInstances() and instancesProcessed <= maxInstancesToProcess:\n",
-    "    instance = _JavaLabeledInstance(schema, rtg.nextInstance())\n",
+    "    instance = LabeledInstance.from_java_instance(schema, rtg.nextInstance())\n",
     "    prediction = learner.predict(instance)\n",
     "    \n",
     "    evaluator.update(instance.y_index, prediction)\n",
@@ -2708,10 +2702,10 @@
      "start_time": "2024-03-02T08:26:08.226024Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:55.967089Z",
-     "iopub.status.busy": "2024-03-21T04:38:55.966905Z",
-     "iopub.status.idle": "2024-03-21T04:38:57.822071Z",
-     "shell.execute_reply": "2024-03-21T04:38:57.821618Z"
+     "iopub.execute_input": "2024-03-27T22:56:47.897954Z",
+     "iopub.status.busy": "2024-03-27T22:56:47.897845Z",
+     "iopub.status.idle": "2024-03-27T22:56:48.402147Z",
+     "shell.execute_reply": "2024-03-27T22:56:48.401772Z"
     }
    },
    "outputs": [
@@ -2879,10 +2873,10 @@
      "start_time": "2024-03-02T08:26:10.869554Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:57.824594Z",
-     "iopub.status.busy": "2024-03-21T04:38:57.823991Z",
-     "iopub.status.idle": "2024-03-21T04:38:59.533830Z",
-     "shell.execute_reply": "2024-03-21T04:38:59.532953Z"
+     "iopub.execute_input": "2024-03-27T22:56:48.403595Z",
+     "iopub.status.busy": "2024-03-27T22:56:48.403474Z",
+     "iopub.status.idle": "2024-03-27T22:56:49.035485Z",
+     "shell.execute_reply": "2024-03-27T22:56:49.034964Z"
     }
    },
    "outputs": [
@@ -2939,10 +2933,10 @@
      "start_time": "2024-03-02T08:26:14.001150Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:38:59.536416Z",
-     "iopub.status.busy": "2024-03-21T04:38:59.536224Z",
-     "iopub.status.idle": "2024-03-21T04:39:01.448646Z",
-     "shell.execute_reply": "2024-03-21T04:39:01.447918Z"
+     "iopub.execute_input": "2024-03-27T22:56:49.037053Z",
+     "iopub.status.busy": "2024-03-27T22:56:49.036922Z",
+     "iopub.status.idle": "2024-03-27T22:56:49.846900Z",
+     "shell.execute_reply": "2024-03-27T22:56:49.846298Z"
     }
    },
    "outputs": [
@@ -3109,10 +3103,10 @@
      "start_time": "2024-03-02T08:26:17.206292Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-03-21T04:39:01.451836Z",
-     "iopub.status.busy": "2024-03-21T04:39:01.451508Z",
-     "iopub.status.idle": "2024-03-21T04:39:04.966242Z",
-     "shell.execute_reply": "2024-03-21T04:39:04.965431Z"
+     "iopub.execute_input": "2024-03-27T22:56:49.848496Z",
+     "iopub.status.busy": "2024-03-27T22:56:49.848385Z",
+     "iopub.status.idle": "2024-03-27T22:56:51.034684Z",
+     "shell.execute_reply": "2024-03-27T22:56:51.034419Z"
     }
    },
    "outputs": [
@@ -3288,7 +3282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
