Updates to Notebooks

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -17,6 +17,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0b2f276",
+   "metadata": {},
+   "source": [
+    "## 0. CapyMOA import and reading data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
@@ -65,9 +73,9 @@
     "\n",
     "\n",
     "**Some remarks about test-then-train loop**:\n",
-    "* We must not train before testing, meaning that steps 2 and 3 should not be interchanged, as this would invalidate our interpretation concerning how the model performs on unseen data, leading to unreliable evaluations of its efficacy. \n",
+    "* We **must not train before testing**, meaning that steps 2 and 3 should not be interchanged, as this would invalidate our interpretation concerning how the model performs on unseen data, leading to unreliable evaluations of its efficacy. \n",
     "* Steps 3 and 4 can be completed in any order without altering the result. \n",
-    "* What if labels are not immediately available? Then you might want to read about delayed labeling and partially labeled data, see [A Survey on Semi-supervised Learning for Delayed Partially Labelled Data Streams](https://dl.acm.org/doi/full/10.1145/3523055)\n",
+    "* What if labels are not immediately available? Then you might want to read about delayed labeling and partially labeled data, see [A Survey on Semi-supervised Learning for Delayed Partially Labelled Data Streams](https://dl.acm.org/doi/full/10.1145/3523055) [See SSL_example.ipynb ]\n",
     "* More information on classification for data streams is available on section *2.2 Classification* from [Machine Learning for Data Streams](https://moa.cms.waikato.ac.nz/book-html/) book\n"
    ]
   },
