--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -142,7 +142,9 @@
     "    * If you want to know more about other **high-level evaluation functions**, **evaluators**, or which **metrics** are available, check the complete **Evaluation documentation** in LINK_CAPYMOA_ORG\n",
     "    * The **results** from evaluation functions such as **prequential_evaluation** follow a standard, also discussed thoroughly in the **Evaluation documentation** in LINK_CAPYMOA_ORG\n",
     "    * Sometimes authors refer to the **cumulative** metrics as **test-then-train** metrics, such as **test-then-train accuracy** (or TTT accuracy for short). They all refer to the same concept.\n",
-    "    * Shouldn't we recreate the stream object ```elec_stream```? No, high-level functions automatically ```restart()``` streams"
+    "    * Shouldn't we recreate the stream object ```elec_stream```? No, high-level evaluators automatically ```restart()``` streams when they are reused.\n",
+    "\n",
+    "In the below example ```prequential_evaluation``` is used with ```HoeffdingTree``` classifier on ```elec_stream``` datastream."
    ]
   },
   {
