--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -880,9 +880,9 @@
    "metadata": {},
    "source": [
     "#### 1.2.1 Parameters for generic wrappers\n",
-    "\n",
+    " \n",
     "* MOA objects can be parametrized using the MOA CLI (Command Line Interface)\n",
-    "* ```moa_learner.CLI_help()``` will present all the options available for the ```moa_learner``` object.\n",
+    "* Sometimes you may not know the relevent parameters for ```moa_learner```,  ```moa_learner.CLI_help()``` will present all the options available for the ```moa_learner``` object.\n",
     "* For example, the code below will show all options for kNN and then create a knn object with ```k=1``` and a window of ```5000``` instances (hyperparameter ```limit```). "
    ]
   },
