--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -930,7 +930,7 @@
     "### 1.3 Comparing results among classifiers\n",
     "\n",
     "* CapyMOA provides ```plot_windowed_results``` as an easy visualization function for quickly comparing **windowed metrics**\n",
-    "* In the example below, we create three classifiers: HoeffdingAdaptiveTree, OnlineBagging and StreamingRandomPatches.\n",
+    "* In the example below, we create three classifiers: HoeffdingAdaptiveTree, OnlineBagging and StreamingRandomPatches, and plot the results using ```plot_windowed_results```.\n",
     "* More details about ```plot_windowed_results``` options are described in the documentation LINK_CAPYMOA_ORG"
    ]
   },
