--- a/notebooks/01_evaluation.ipynb
+++ b/notebooks/01_evaluation.ipynb
@@ -46,12 +46,12 @@
     "## 1. The difference between Evaluators\n",
     "\n",
     "* The following example implements an **while loop** that updates a ```ClassificationWindowedEvaluator``` and a ```ClassificationEvaluator``` for the same learner. \n",
-    "* The ```ClassificationWindowedEvaluator``` update the metrics according to tumbling windows which 'forgets' old correct and incorrect predictions. This allow us to observe how well the learner performs on shorter windows. \n",
-    "* The ```ClassificationEvaluator``` update the metrics taking into account all the correct and incorrect predictions made. It is useful to observe the overall performance after processing hundreds of thousands of instances.\n",
+    "* The ```ClassificationWindowedEvaluator``` update the metrics according to tumbling windows which 'forgets' old correct and incorrect predictions. This allows us to observe how well the learner performs on shorter windows. \n",
+    "* The ```ClassificationEvaluator``` updates the metrics taking into account all the correct and incorrect predictions made. It is useful to observe the overall performance after processing hundreds of thousands of instances.\n",
     "\n",
     "* **Two important points**:\n",
-    "    1. Regarding **window_size** in ```ClassificationEvaluator```: A ```ClassificationEvaluator``` also allow us to specify a window size, but it only controls the frequency at which cumulative metrics are calculated.\n",
-    "    2. If we access metrics directly (not through ```metrics_per_window()```) in ```ClassificationWindowedEvaluator``` we will be looking at the metrics corresponding to the last window.\n",
+    "    1. Regarding **window_size** in ```ClassificationEvaluator```: A ```ClassificationEvaluator``` also allow us to specify a window size, but it **only controls the frequency at which cumulative metrics are calculated**.\n",
+    "    2. If we access metrics directly (not through ```metrics_per_window()```) in ```ClassificationWindowedEvaluator``` we will be looking at the metrics corresponding to the last window. On the other hand, ```metrics_per_window()``` returns metrics for each window.\n",
     " \n",
     "For further insight into the specifics of the Evaluators, please refer to the documentation: LINK_CAPYMOA_ORG"
    ]
@@ -219,7 +219,7 @@
    "source": [
     "## 2. High-level evaluation functions\n",
     "\n",
-    "In CapyMOA, for supervised learning, there are three primary evaluation functions designed to handle the manipulation of Evaluators. They streamline the process, ensuring users need not directly update them. Essentially, these functions execute the evaluation loop and manage the updating of Evaluators as follows: \n",
+    "In CapyMOA, for supervised learning, there are three primary evaluation functions designed to handle the manipulation of Evaluators. They streamline the process, ensuring users need not directly update them. Essentially, these functions execute the evaluation loop and update the relevant Evaluators: \n",
     "\n",
     "1. ```test_then_train_evaluation()``` -> ```ClassificationEvaluator```\n",
     "2. ```windowed_evaluation()``` -> ```ClassificationWindowedEvaluator```\n",
@@ -323,7 +323,7 @@
    "source": [
     "### 2.2 windowed_evaluation()\n",
     "\n",
-    "A ```windowed_evaluation()``` update metrics per windows, which means metrics are reported based on subsets (windows) of instances. Reporting metrics per window allow us to observe how the model was performing in a particular point in time, instead of only observe an overall result. \n",
+    "A ```windowed_evaluation()``` update metrics per windows, which means metrics are reported based on subsets (windows) of instances. Reporting metrics per window allow us to observe how the model was performing in a particular point in time, instead of overall performance. \n",
     "\n",
     "* The Evaluator object present in the results dictionary (key: 'windowed') returned from ```windowed_evaluation()``` is a ```WindowedClassificationEvaluator```\n",
     "* The relevant results are accessible through ```metrics_per_window()``` function. \n",
@@ -716,13 +716,14 @@
    "source": [
     "### 2.3 prequential_evaluation()\n",
     "\n",
-    "A ```prequential_evaluation()``` combines ```windowed_evaluation()``` and ```test_then_train_evaluation```. Internally, it maintainsa ```ClassificationWindowedEvaluator``` and ```ClassificationEvaluator```. This allow us to have access to the **cumulative** and **windowed** results without running two separate evaluation functions. \n",
+    "A ```prequential_evaluation()``` combines ```windowed_evaluation()``` and ```test_then_train_evaluation```. Internally, it maintains a ```ClassificationWindowedEvaluator``` and ```ClassificationEvaluator```. This allows us to have access to the **cumulative** and **windowed** results without running two separate evaluation functions. \n",
     "\n",
-    "* The Evaluators object present in the results dictionary  and 'cumulative') returned from ```prequential_evaluation()``` are a ```ClassificationWindowedEvaluator``` (key: 'windowed') and a ```ClassificationEvaluator``` (key: 'cumulative'). \n",
+    "* The results dictionary returned from ```prequential_evaluation()``` contains Evaluators objects ```ClassificationWindowedEvaluator``` (key: 'windowed') and ```ClassificationEvaluator``` (key: 'cumulative'). \n",
     "\n",
-    "* To investigate the ```cumulative``` results, we can access the ```metrics_dictionary```\n",
+    "```cumulative``` results can be accessed via ```metrics_dict()```\n",
     "  \n",
-    "* Notice that the computational overhead of training and assessing the same model twice outweights the minimum overhead of updating the two Evaluators within the function. Thus in most cases it is advisable to use the ```prequential_evaluation()``` function instead of ```windowed_evaluation()``` and ```test_then_train_evaluation``` separately. "
+    "* Notice that the computational overhead of training and assessing the same model twice outweighs the minimum overhead of updating the two Evaluators within the function. Thus, in most cases it is advisable to use the ```prequential_evaluation()``` function instead of ```windowed_evaluation()``` and ```test_then_train_evaluation``` separately. \n",
+    "* results from above functions could be directly passed into ```plot_windowed_results()``` for plotting."
    ]
   },
   {
@@ -1224,7 +1225,7 @@
     "\n",
     "* We introduce a simple example using regression just to show how similar it is to assess regressors using the **high-level evaluation functions**\n",
     "* In the example below, we just use ```prequential_evaluation()``` but it would work with ```test_then_train_evaluation()``` and ```windowed_evaluation()``` as well.\n",
-    "* One difference between Classification and Regression evaluation in CapyMOA is that the Evaluators are different. Instead of ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator``` we should use ```RegressionEvaluator``` and ```RegressionWindowedEvaluator```"
+    "* One difference between Classification and Regression evaluation in CapyMOA is that the Evaluators are different. Instead of ```ClassificationEvaluator``` and ```ClassificationWindowedEvaluator``` functions use ```RegressionEvaluator``` and ```RegressionWindowedEvaluator```"
    ]
   },
   {
@@ -1278,7 +1279,7 @@
    "source": [
     "### 3.1 Evaluating a single stream using multiple learners (Regression)\n",
     "\n",
-    "* Similarly to what we can do with Classification, it is doable to use ```prequential_evaluation_multiple_learners``` for Regression"
+    "* Similarly to multiple learners in Classification, ```prequential_evaluation_multiple_learners``` can also be used for Regression with multiple learners."
    ]
   },
   {
@@ -1352,9 +1353,9 @@
    "source": [
     "### 3.2 Plotting predictions vs. ground truth over time (Regression)\n",
     "\n",
-    "In Regression it is sometimes desirable to plot **predictions vs. ground truth** to observe what is happening with the Stream. If we create a custom loop and use the Evaluators directly it is trivial to store the ground truth and predictions, and then proceed to plot them. However, to make people's life easier. \n",
+    "In Regression it is sometimes desirable to plot **predictions vs. ground truth** to observe what is happening with the Stream. If we create a custom loop and use the Evaluators directly it is trivial to store the ground truth and predictions, and then proceed to plot them. However, to make people's life easier ```plot_predictions_vs_ground_truth``` function can be used. \n",
     "\n",
-    "* For massive streams with millions of instances it can be unbearable to plot all at once, thus we can specify a ```plot_interval``` that we want to investigate. By default, the plot function will attempt to plot everything, i.e. if ```plot_interval=None```"
+    "* For massive streams with millions of instances it can be unbearable to plot all at once, thus we can specify a ```plot_interval``` (that we want to investigate) to ```plot_predictions_vs_ground_truth```. By default, the plot function will attempt to plot everything, i.e. if ```plot_interval=None```"
    ]
   },
   {
